@@ -52,6 +52,7 @@ depth: 1
  * Filter out comments on Page editing counts that do not correspond to a valid field / block path on the page such as when a field has been removed (Matt Westcott)
  * Allow `PublishMenuItem` to more easily support overriding its label via `construct_page_action_menu` (Sébastien Corbin)
  * Allow locale selection when creating a page at the root level (Sage Abdullah)
+ * Ensure the admin login template correctly displays all `non_fields_errors` for any custom form validation (Sébastien Corbin)
 
 ### Documentation
 
