@@ -18,6 +18,13 @@ class LoginForm(AuthenticationForm):
 
     remember = forms.BooleanField(required=False)
 
+    error_messages = {
+        **AuthenticationForm.error_messages,
+        "invalid_login": gettext_lazy(
+            "Your %(username_field)s and password didn't match. Please try again."
+        ),
+    }
+
     def __init__(self, request=None, *args, **kwargs):
         super().__init__(request=request, *args, **kwargs)
         self.fields["username"].widget.attrs["placeholder"] = gettext_lazy(
@@ -30,6 +37,13 @@ class LoginForm(AuthenticationForm):
         for field_name in self.fields.keys():
             if field_name not in ["username", "password", "remember"]:
                 yield field_name, self[field_name]
+
+    def get_invalid_login_error(self):
+        return forms.ValidationError(
+            self.error_messages["invalid_login"],
+            code="invalid_login",
+            params={"username_field": self.username_field.verbose_name},
+        )
 
 
 class PasswordResetForm(DjangoPasswordResetForm):
